src/main/java/error/example/domain/exception/AnotherDomainException.java
package error.example.domain.exception;

public class AnotherDomainException extends DomainException {

    public AnotherDomainException(String message) {
        super(message);
    }
}
